[feat] diretivas no angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>App works</h1>
 <parent-data [data] = "userData"></parent-data>
 <router-outlet></router-outlet>
+<app-directives></app-directives>
