[feat] IF no template do angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>App works</h1>
 <parent-data [data] = "userData"></parent-data>
-<router-outlet></router-outlet>
 <app-directives></app-directives>
+<app-if-render></app-if-render>
+
+
+<router-outlet></router-outlet>
