--- a/src/app/components/directives/directives.component.html
+++ b/src/app/components/directives/directives.component.html
@@ -1,7 +1,10 @@
-<!--Adiciona estilo na tag de forma dinâmica e inline-->
-<h2 [ngStyle]="{'font-size':size + 'px', 'font-family': font, color: color}">
-    Testando diretiva de estilos
-</h2>
+<div class="class">
+    <!--Adiciona estilo na tag de forma dinâmica e inline-->
+    <h2 [ngStyle]="{'font-size':size + 'px', 'font-family': font, color: color}">
+        Testando diretiva de estilos
+    </h2>
 
-<!--Adiciona classes na tag de forma dinâmica-->
-<h2 [ngClass]="classes">Testando diretiva de classe 1</h2> 
+    <!--Adiciona classes na tag de forma dinâmica-->
+    <h2 [ngClass]="classes">Testando diretiva de classe 1</h2> 
+</div>
+
