--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,5 +1,7 @@
-<p>parent-data works!</p>
-<h1>Descrevendo usuário: </h1>
-<p>Nome: {{data.name}}</p>
-<p>Email: {{data.email}}</p>
-<p>Permissão: {{data.role}}</p>
+<div class="class">
+    <p>parent-data works!</p>
+    <h1>Descrevendo usuário: </h1>
+    <p>Nome: {{data.name}}</p>
+    <p>Email: {{data.email}}</p>
+    <p>Permissão: {{data.role}}</p>
+</div>
