[feat] trabalhando com evento de click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <parent-data [data] = "userData"></parent-data>
 <app-directives></app-directives>
 <app-if-render></app-if-render>
-
+<app-events></app-events>
 
 <router-outlet></router-outlet>
