[feat] service no angular

--- a/src/app/components/list-render/list-render.component.html
+++ b/src/app/components/list-render/list-render.component.html
@@ -6,6 +6,7 @@
             Nome: {{animal.name}}, Tipo: {{animal.type}}
             
             <button (click)="showAge(animal)"> Ver idade </button>
+            <button (click)="removeAnimal(animal)">Excluir animal</button>
         </li>
 
     </ul>
