[feat] entender o router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<h1>App works</h1>
-<parent-data [data] = "userData"></parent-data>
-<app-directives></app-directives>
-<app-if-render></app-if-render>
-<app-events></app-events>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
-<app-pipes></app-pipes>
-<app-two-way-binding></app-two-way-binding>
+<h1>Header</h1>
+<nav>
+    <a routerLink="/">Home</a><br><br>
+    <a routerLink="/change">Lista</a>
+</nav>
 <router-outlet></router-outlet>
+
+<h1>Header</h1>
