trabalhando com as requisições http

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>Header</h1>
 <nav>
     <a routerLink="/">Home</a><br><br>
-    <a routerLink="/change">Lista</a>
+    <a routerLink="/lista">Lista</a><br><br>
+    <a routerLink="/change">change</a>
+
 </nav>
 <router-outlet></router-outlet>
 
